force-app/main/default/objects/Eng_VP_Position__c/Eng_VP_Position__c.object-meta.xml
<CustomObject>
    <description>Engagement Valuation Period Positions linked with Engagement and Companies</description>
    <label>Eng Valuation Period Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eng Valuation Period Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>