force-app/main/default/objects/Eng_VP_Position__c/fields/Asset_Classes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Classes__c</fullName>
    <label>Asset Classes</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABL</fullName>
            </value>
            <value>
                <fullName>ABS (Other)</fullName>
            </value>
            <value>
                <fullName>Auction Rate Securities</fullName>
            </value>
            <value>
                <fullName>Auto Loans</fullName>
            </value>
            <value>
                <fullName>Bank Assets (FDIC)</fullName>
            </value>
            <value>
                <fullName>CDO</fullName>
            </value>
            <value>
                <fullName>CLO</fullName>
            </value>
            <value>
                <fullName>CLO – MOA / CMV (Asset Manager)</fullName>
            </value>
            <value>
                <fullName>CMBS</fullName>
            </value>
            <value>
                <fullName>Contingent Value Rights</fullName>
            </value>
            <value>
                <fullName>Debt</fullName>
            </value>
            <value>
                <fullName>Debt &amp; Derivatives</fullName>
            </value>
            <value>
                <fullName>Derivatives</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Equity, Debt, &amp; Derivatives</fullName>
            </value>
            <value>
                <fullName>Equity &amp; Debt</fullName>
            </value>
            <value>
                <fullName>Equity &amp; Derivatives</fullName>
            </value>
            <value>
                <fullName>Fix and Flip Mortgages</fullName>
            </value>
            <value>
                <fullName>Fund Manager Valuation</fullName>
            </value>
            <value>
                <fullName>Interest Rate Lock Commitments</fullName>
            </value>
            <value>
                <fullName>Litigation Claims</fullName>
            </value>
            <value>
                <fullName>Marketplace Lending</fullName>
            </value>
            <value>
                <fullName>Market Study</fullName>
            </value>
            <value>
                <fullName>Mortgage Servicing Rights</fullName>
            </value>
            <value>
                <fullName>Non-Performing Loans</fullName>
            </value>
            <value>
                <fullName>PIPE Investments</fullName>
            </value>
            <value>
                <fullName>Residential Mortgages</fullName>
            </value>
            <value>
                <fullName>Reverse Mortgages</fullName>
            </value>
            <value>
                <fullName>Risk Retention</fullName>
            </value>
            <value>
                <fullName>RMBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>