force-app/main/default/objects/Eng_VP_Position__c/fields/Automation_Tool_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Automation_Tool_Utilized__c</fullName>
    <label>Automation Tool Utilized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>