force-app/main/default/objects/Eng_VP_Position__c/fields/Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date__c</fullName>
    <label>Cancel Date</label>
    <type>DateTime</type>
</CustomField>