force-app/main/default/objects/Eng_VP_Position__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Automation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>