force-app/main/default/objects/Eng_VP_Position__c/fields/Company_Sector__c.field-meta.xml
<CustomField>
    <fullName>Company_Sector__c</fullName>
    <formula>TEXT( Company__r.Sector__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Sector</label>
    <type>Text</type>
</CustomField>