force-app/main/default/objects/Eng_VP_Position__c/fields/Engagement_Number__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Number__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;    Engagement_VP__r.Engagement__c    ,   Engagement_VP__r.Engagement__r.Engagement_Number__c  , &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Number</label>
    <type>Text</type>
</CustomField>