force-app/main/default/objects/Eng_VP_Position__c/fields/Engagement_Stage__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Stage__c</fullName>
    <formula>TEXT(Engagement_VP__r.Engagement__r.Stage__c)</formula>
    <label>Engagement_Stage</label>
    <type>Text</type>
</CustomField>