force-app/main/default/objects/Eng_VP_Position__c/fields/Engagement_VP__c.field-meta.xml
<CustomField>
    <fullName>Engagement_VP__c</fullName>
    <label>Engagement Valuation Period</label>
    <referenceTo>Eng_VP__c</referenceTo>
    <relationshipName>Eng_VP_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>