force-app/main/default/objects/Eng_VP_Position__c/fields/Fee_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Approval_Date__c</fullName>
    <label>Fee Approval Date</label>
    <type>Date</type>
</CustomField>