force-app/main/default/objects/Eng_VP_Position__c/fields/Fee_Completed__c.field-meta.xml
<CustomField>
    <fullName>Fee_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>