force-app/main/default/objects/Eng_VP_Position__c/fields/Generate_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Generate_Accrual__c</fullName>
    <label>Generate Accrual</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>