force-app/main/default/objects/Eng_VP_Position__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <formula>TEXT(Company__r.Industry_Group__c)</formula>
    <label>Industry Group</label>
    <type>Text</type>
</CustomField>