force-app/main/default/objects/Eng_VP_Position__c/fields/Industry_Group_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Picklist__c</fullName>
    <inlineHelpText>Industry Group of the Position.</inlineHelpText>
    <label>Position Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUS - Business Services</fullName>
            </value>
            <value>
                <fullName>CFR - Consumer Food &amp; Retail</fullName>
            </value>
            <value>
                <fullName>FIG - Financial Institutions</fullName>
            </value>
            <value>
                <fullName>HC - Healthcare</fullName>
            </value>
            <value>
                <fullName>IG - Industrials</fullName>
            </value>
            <value>
                <fullName>O&amp;G - Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>POW - Power &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>RE - Real Estate Lodging and Leisure</fullName>
            </value>
            <value>
                <fullName>SOV - Sovereigns</fullName>
            </value>
            <value>
                <fullName>TECH - Technology</fullName>
            </value>
            <value>
                <fullName>TRANS - Transportation &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>ADG - Aerospace Defense and Government</fullName>
                <isActive>false</isActive>
                <label>ADG - Aerospace Defense and Government</label>
            </value>
            <value>
                <fullName>DA - Data &amp; Analytics</fullName>
                <isActive>false</isActive>
                <label>DA - Data &amp; Analytics</label>
            </value>
            <value>
                <fullName>OTHER - Other</fullName>
                <isActive>false</isActive>
                <label>OTHER - Other</label>
            </value>
            <value>
                <fullName>TMT - Technology Media &amp; Telecommunications</fullName>
                <isActive>false</isActive>
                <label>TMT - Technology Media &amp; Telecommunications</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>