force-app/main/default/objects/Eng_VP_Position__c/fields/Is_By_Pass_Error_On_Edit_AfterComplete__c.field-meta.xml
<CustomField>
    <fullName>Is_By_Pass_Error_On_Edit_AfterComplete__c</fullName>
    <label>Is By Pass Error On Edit AfterComplete</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>