force-app/main/default/objects/Eng_VP_Position__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Position Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>