force-app/main/default/objects/Eng_VP_Position__c/fields/Position_Name__c.field-meta.xml
<CustomField>
    <fullName>Position_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Name</label>
    <type>Text</type>
</CustomField>