force-app/main/default/objects/Eng_VP_Position__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convertible Debt or Attached Warrants</fullName>
            </value>
            <value>
                <fullName>Currency Conversion</fullName>
            </value>
            <value>
                <fullName>Custom Deliverable</fullName>
            </value>
            <value>
                <fullName>Debt Recovery Analysis / Distressed</fullName>
            </value>
            <value>
                <fullName>Discount Rate support reliant on VC rates of return</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Industry Specific</fullName>
            </value>
            <value>
                <fullName>Last Out waterfall DCF</fullName>
            </value>
            <value>
                <fullName>Multiple investment outcomes modeled and weighted</fullName>
            </value>
            <value>
                <fullName>Non-Standard Multiples</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prior Valuation Comparison</fullName>
            </value>
            <value>
                <fullName>Scrubbed Comps</fullName>
            </value>
            <value>
                <fullName>Structured Products</fullName>
            </value>
            <value>
                <fullName>Tiered Comps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>