force-app/main/default/objects/Eng_VP_Position__c/fields/Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>Report_Fee__c</fullName>
    <label>Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>