force-app/main/default/objects/Eng_VP_Position__c/fields/Revenue_Month__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Month__c</fullName>
    <description>Select the Current Month for this Monthly Revenue Process Control record</description>
    <inlineHelpText>Select the Current Month for this Monthly Revenue Process Control record</inlineHelpText>
    <label>Revenue Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>