force-app/main/default/objects/Eng_VP_Position__c/recordTypes/Cancelled.recordType-meta.xml
<RecordType>
    <fullName>Cancelled</fullName>
    <active>true</active>
    <description>Record type for cancelled Positions</description>
    <label>Cancelled</label>
</RecordType>