force-app/main/default/objects/Eng_VP_Position__c/recordTypes/Current.recordType-meta.xml
<RecordType>
    <fullName>Current</fullName>
    <active>true</active>
    <description>This is for record type before cancellation</description>
    <label>Current</label>
</RecordType>