force-app/main/default/objects/Eng_VP_Position__c/validationRules/HL_PVPOCValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_PVPOCValidation</fullName>
    <active>true</active>
    <description>Validate POC before completing the position</description>
    <errorConditionFormula>IF( 
  AND(
    ISPICKVAL( Status__c ,&apos;Completed, Generate Accrual&apos;)
    ,Engagement_VP__r.Engagement__r.Percentage_of_Completion__c=0)
  ,TRUE
  ,FALSE)</errorConditionFormula>
    <errorMessage>Please update the stage to generate a revenue accrual.</errorMessage>
</ValidationRule>