force-app/main/default/objects/Eng_VP_Position__c/validationRules/ReportFeeFieldValidation_EngVPPos.validationRule-meta.xml
<ValidationRule>
    <fullName>ReportFeeFieldValidation_EngVPPos</fullName>
    <active>false</active>
    <description>Report fee can not be negative</description>
    <errorConditionFormula>IF(Report_Fee__c &lt; 0, true, false)</errorConditionFormula>
    <errorMessage>Report fee field value can not be negative.</errorMessage>
</ValidationRule>