force-app/main/default/objects/Eng_VP_Position__c/validationRules/Require_Automation_Fields_For_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Automation_Fields_For_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISPICKVAL(Status__c , &apos;Completed, Generate Accrual&apos;) ,
ISPICKVAL(Automation_Tool_Utilized__c, &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Please update Automation Tool usage information for selected position(s).</errorMessage>
</ValidationRule>